--- a/src/constants/data/projects.json
+++ b/src/constants/data/projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "title": "NBCU MAP & DASHBOARD PORTAL",
+        "title": "Nbcu Map & Dashboard Portal",
         "detailLists": [
             "Media-based application used by NBCU employees for managing media-related requests.",
             "The application allows users make request to create, download, delete, send, and move media\nfiles, as well as initialize upcoming events.",
@@ -15,7 +15,7 @@
         ]
     },
     {
-        "title": "OAKNORTH ELEVATE PORTAL",
+        "title": "Oaknorth Elevate Portal",
         "detailLists": [
             "Interactive Online Banking Application that supports User-Friendly Experience with fully\nresponsive design that allows easy access on any device, enabling effortless management of your\naccounts.",
             "Access a diverse range of services, including Business Loans, Personal Savings, Fixed-Term\nDeposits (FTD), Non-Resident Accounts (NA), Educational Accounts (EA), and Educational\nInstitutional Savings Accounts (EAISA)."
@@ -29,7 +29,7 @@
         ]
     },
     {
-        "title": "CLINICAL TRIAL",
+        "title": "Clinical Trial",
         "detailLists": [
             "Online Medical Resource for Genentech Products designed for healthcare providers, offering\nclinical and trial information on Genentech products through a web platform.",
             "The portal Enables PIs to manage patient medical diaries and activities efficiently. Provides a\nfeature for scheduling virtual appointments with patients via video or audio calls"
@@ -43,7 +43,7 @@
         ]
     },
     {
-        "title": "LIGHTING AUTOMATION",
+        "title": "Lighting Automation",
         "detailLists": [
             "Lighting Division delivers a range of innovative and reliable indoor and outdoor lighting and\ncontrols solutions",
             "It provides features of WaveLinx, Trellix, HALO Home that is enable a smarter, safer lighting\ncontrol system for homes, buildings"
@@ -55,7 +55,7 @@
         ]
     },
     {
-        "title": "ENOC",
+        "title": "Enoc",
         "detailLists": [
             "Emirates National Oil Company Group (ENOC) is a leading integrated global oil and gas player\noperating across the energy sector value chain",
             "Developed and maintain the annual report for ENOC websites"
@@ -67,7 +67,7 @@
         ]
     },
     {
-        "title": "RM ASSESSOR",
+        "title": "Rm Assessor",
         "detailLists": [
             "The innovative high stakes e-marking platform to provide an Online e-marking feature with\nsupporting three languages"
         ],
@@ -78,7 +78,7 @@
         ]
     },
     {
-        "title": "JOBDIAGNOSIS",
+        "title": "Jobdiagnosis",
         "detailLists": [
             "Developed a US-based job portal website, handling both the UI and backend using JavaScript,\nHTML, PHP, and MySQL.",
             "Worked on various UI modules for a native mobile application built with the Angular and Ionic\nframeworks"
