Completed the all sections

--- a/src/constants/data/projects.json
+++ b/src/constants/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "NBCUniversal Forms",
+    "title": "NBCUniversal Media Acquisition Portal",
     "detailLists": [
       "Spearheaded the development of a media management platform used by NBCU employees to manage media requests, reducing manual processing time by 40%.",
       "Led the design and implementation of features to create, download, delete, and move media files, as well as managing upcoming events, enhancing operational efficiency.",
