--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/material": "^6.4.1",
         "gh-pages": "^6.3.0",
         "normalize.css": "^8.0.1",
+        "puppeteer": "^24.10.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-to-pdf": "^1.0.1"
