--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "puppeteer": "^24.10.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-loader-spinner": "^6.1.6",
         "react-to-pdf": "^1.0.1"
     },
     "devDependencies": {
